--- a/style.css
+++ b/style.css
@@ -27,32 +27,16 @@ header {
     height: 100px;
 }
 
-.icon-card .progress-bar {
-    width: 100%;
-    height: 10px;
-    background: #ddd;
-    margin-top: 10px;
-    border-radius: 5px;
-    display: none; /* Oculto por defecto */
-}
-
-.icon-card .progress-bar .progress {
-    height: 100%;
-    background: green;
-    width: 0%; /* Inicia en 0% */
-    border-radius: 5px;
-}
-
-button {
+.download-btn {
+    display: inline-block;
     margin-top: 10px;
     padding: 10px 20px;
     background-color: #007bff;
     color: white;
-    border: none;
-    cursor: pointer;
+    text-decoration: none;
     border-radius: 5px;
 }
 
-button:hover {
+.download-btn:hover {
     background-color: #0056b3;
 }
